tests/grammar/snapshots/r#mod__grammar__alpha034__import-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"import  \\\"unclosed\"))"
---
(
    Some(
        [
            (
                Import(
                    (
                        false,
                        0..6,
                    ),
                    (
                        "import",
                        0..6,
                    ),
                    (
                        ImportAll,
                        8..6,
                    ),
                    (
                        "from",
                        8..6,
                    ),
                    (
                        "unclosed",
                        8..17,
                    ),
                ),
                0..17,
            ),
        ],
    ),
    [
        found "\"" at 8..9 expected '"*"', or '"{"',
        found "\"" at 8..9 expected something else,
        found end of input at 17..17 expected '"\""',
    ],
)
