tests/grammar/snapshots/r#mod__grammar__alpha034__parentheses-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"(1,)\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Parentheses(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                1..2,
                                            ),
                                        ),
                                        1..2,
                                    ),
                                ),
                                0..4,
                            ),
                        ),
                        0..4,
                    ),
                ),
                0..4,
            ),
        ],
    ),
    [
        found "," at 2..3 expected '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '")"',
    ],
)
