tests/grammar/snapshots/r#mod__grammar__alpha034__text-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(r#\"\"{\"\"#))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Text(
                                    [
                                        (
                                            Expression(
                                                (
                                                    Text(
                                                        [],
                                                    ),
                                                    2..3,
                                                ),
                                            ),
                                            1..3,
                                        ),
                                    ],
                                ),
                                0..3,
                            ),
                        ),
                        0..3,
                    ),
                ),
                0..3,
            ),
        ],
    ),
    [
        found end of input at 3..3 expected '"\\"', '"{"', or '"\""',
        found end of input at 3..3 expected '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '"}"',
        found end of input at 3..3 expected '"}"', '"\\"', '"{"', or '"\""',
    ],
)
